[package]
name = "actions_commit"
version = "1.0.3"
edition = "2021"

[lib]
name = "actions_commit"
path = "src/lib.rs"

[[bin]]
name = "action"
path = "src/bin.rs"

[dependencies]
actions_toolkit = { git = "https://github.com/dev-bio/actions-toolkit.git", rev = "70292bbecfa2e7b7bba860f4f854998dae6b554d" }
glob = { version = "0.3.1" }
anyhow = "1.0.72"
rayon = "1.9.0"
sha1 = "0.10.6"
hex = "0.4.3"
