[package]
name = "actions_commit"
version = "2.0.1"
edition = "2021"

[lib]
name = "actions_commit"
path = "src/lib.rs"

[[bin]]
name = "action"
path = "src/bin.rs"

[dependencies]
actions_toolkit = { git = "https://github.com/dev-bio/actions-toolkit.git", rev = "c1a248bb6c111ad4f3d6272de440966fdbbf7e90" }
glob = { version = "0.3.1" }
anyhow = "1.0.72"
rayon = "1.9.0"
sha1 = "0.10.6"
hex = "0.4.3"
