[package]
name = "actions_commit"
version = "2.1.0"
edition = "2021"

[lib]
name = "actions_commit"
path = "src/lib.rs"

[[bin]]
name = "action"
path = "src/bin.rs"

[dependencies]
actions_toolkit = { git = "https://github.com/dev-bio/actions-toolkit.git", rev = "9e0c6d70848a443081b6c521c8e2ae5b17b3cdd9" }
glob = { version = "0.3.3" }
anyhow = "1.0.72"
rayon = "1.9.0"
sha1 = "0.10.6"
hex = "0.4.3"
